changed ui & added win counter

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+    <!-- <audio src="bgmusic.mp3" autoplay loop></audio> -->
     <main>
-        <div class="cells"></div>
+        <div class=" cells"></div>
         <div class="cells"></div>
         <div class="cells"></div>
         <div class="cells"></div>
