--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="script.js" defer></script>
+    <script src="js/index.js" defer></script>
     <title>Tic-Tac-Toe</title>
     <link rel="icon" href="favicon.ico?" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
@@ -18,8 +18,8 @@
         <section>
             <p>Pick Player 1's Mark</p>
             <div id="wrapper">
-                <div>❌</div>
-                <div>⭕</div>
+                <div id="1">❌</div>
+                <div id="2">⭕</div>
             </div>
             <p>Remember X Goes First</p>
         </section>
