--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/index.js" defer></script>
+    <script src="js/index.js" type="module" defer></script>
     <title>Tic-Tac-Toe</title>
     <link rel="icon" href="favicon.ico?" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
@@ -23,8 +23,8 @@
             </div>
             <p>Remember X Goes First</p>
         </section>
-        <a href="game.html"><button>NEW GAME (VS PC)</button></a>
-        <a href="game.html"><button>NEW GAME (VS PLAYER)</button></a>
+        <a href="game.html" id="pcbutton"><button>NEW GAME (VS PC)</button></a>
+        <a href="game.html" id="playerbutton"><button>NEW GAME (VS PLAYER)</button></a>
     </main>
 </body>
 
