--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/game.css">
-    <script src="js/game.js" type="module" defer></script>
+    <script src="js/game.js" defer></script>
     <title>Tic-Tac-Toe</title>
     <link rel="icon" href="favicon.ico?" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
