fixed single player

--- a/index.html
+++ b/index.html
@@ -14,16 +14,9 @@
 
 <body>
     <main>
-        <p id="heading">❌⭕</p>
-        <section>
-            <p>Pick Player 1's Mark</p>
-            <div id="wrapper">
-                <div id="1">❌</div>
-                <div id="2">⭕</div>
-            </div>
-            <p>Remember X Goes First</p>
-        </section>
-        <a href="game.html" id="pcbutton"><button>NEW GAME (VS PC)</button></a>
+        <p id="heading">Tic Tac Toe</p>
+    
+        <a href="game2.html" id="pcbutton"><button>NEW GAME (VS PC)</button></a>
         <a href="game.html" id="playerbutton"><button>NEW GAME (VS PLAYER)</button></a>
     </main>
 </body>
