--- a/game2.html
+++ b/game2.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="path/to/your/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/game.css">
-    <script src="js/game.js" defer></script>
+    <script src="js/game2.js" defer></script>
     <title>Tic-Tac-Toe</title>
     <link rel="icon" href="favicon.ico?" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
@@ -16,7 +16,7 @@
 <body>
     
     <main>
-        <div class="cells"></div>
+        <div class=" cells"></div>
         <div class="cells"></div>
         <div class="cells"></div>
         <div class="cells"></div>
